examples/src/com/oraclejava/learnjava/oop/finalp/I.java
package com.oraclejava.learnjava.oop.finalp;

public interface I {
//	String s1;  // error
	String s2 = "abc";
}
